syntax = "proto3";

package order;

option go_package = "github.com/my-store/pkg/api/order";

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse) {}
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse) {}
}

message OrderItem {
  int64 product_id = 1;
  int32 quantity = 2;
  double price = 3;
}

message CreateOrderRequest {
  int64 user_id = 1;
  repeated OrderItem items = 2;
}

message CreateOrderResponse {
  int32 status = 1;
  string error = 2;
  int64 order_id = 3;
}

message GetOrderRequest {
  int64 order_id = 1;
}

message GetOrderResponse {
  int32 status = 1;
  string error = 2;
  int64 order_id = 3;
  int64 user_id = 4;
  repeated OrderItem items = 5;
}

